corpus/add.txt
==================
No param
==================

ADD /src ./dst

---

(source_file
	(add_instruction
		(path)
		(path)))

==================
With param
==================

ADD --chown=a:b /src ./dst

---

(source_file
	(add_instruction
		(param)
		(path)
		(path)))

==================
Multiple files
==================

ADD src1 src2 dst

---

(source_file
  (add_instruction
    (path)
    (path)
    (path)))
